# connect-demo

./: .gitignore  Connect_Demo_Repo_Overview.md  README.md  create_config.sh  requirements.txt
aiv/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  aiv.py  aiv_private_key.pem  aiv_public_key.pem  aiv_taf.json  attestationCertificate.pem  cmake_install.cmake  cryptoutils.c  cryptoutils.h  deprecated.py  ecdsa_public_key.pem  helper_function.py  test_producer.py
aiv/cmake/: buildOpenSSL.cmake
bash_scripts/: check_system_trustworthy.sh  kafka_setup.sh  migration.sh  python_setup.sh  server.properties_modified  start_taf_aiv_migration.sh  taf.sh  usb_led_control.sh
benchmarks/: eval_base.py
documentation/docs/: cacc.md  migrationapp.md  sumo.md  utils.md
documentation/setups/: KAFKA_SSL.md  Remote_Desktop_Setup.md  Wireguard_VPN_Client_Setup_Guide.md  Wireguard_VPN_Server_Setup_Guide.md  password_less_ssh_setup.md
python/cc/: README.md  cc.py  cc_logic.py  gui.py
python/migration_app/: README.md  denso.json  migration_app.py  msg_in  msg_out  tas_init_handler.py  tas_notify_handler.py  tas_sub_handler.py  tas_tear_handler.py  tas_unsub_handler.py
python/sumo/: README.md  demo.net.xml  demo.py  demo.rou.xml  det.out.xml  sumo_logic.py  tripinfo.xml
python/sumo/old_demo/: FINAL_demo.py  demo.py  demo2.py  demoGraph.py  graph.py
python/utils/: README.md  denso.json  example.py  models.py  template_config.yaml  test_consumer.py  test_kafka.py  test_producer.py  utils.py
taf/: README.md
taf/tlee-implementation-main/: .gitignore  README.md  go.mod  go.sum
taf/tlee-implementation-main/cmd/: main.go
taf/tlee-implementation-main/documentation/: CreateDAG.md  DspgTransform.md  Evaluator.md  ExpressionSynthesizer.md  FindSubTrustModels.md  GenerateRandomDSPGGraph.md  MetaToConcreteExpressionConverter.md  ToDSPGTransform.md
taf/tlee-implementation-main/documentation/Dtos/: AllSubPpsDTO.md  DataChildDTO.md  DataChildExpressionDTO.md  EdgeDTO.md  ExpressionDTO.md  InputEvaluatorDTO.md  KeyDTO.md  NodesEdges.md  OpinionDTO.md  ProcessingPathDTO.md  SynthesizingGraphDTO.md  VertexEdgeDTO.md  VertexPropertiesDTO.md
(+114 files in other folders)
